Remove margin from body

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
+  font-family: sans-serif;
   box-sizing: border-box;
 
   -moz-text-size-adjust: 100%;
@@ -16,4 +17,8 @@ html {
   *, *::before, *::after {
     box-sizing: inherit;
   }
+}
+
+body {
+  margin: 0;
 }
